@@ -4628,18 +4628,13 @@ static int __devinit nv_probe(struct pci_dev *pci_dev, const struct pci_device_i
 	np->autoneg = 1;
 
 	// offer device to EtherCAT master module
-	if (ecdev_offer(dev, ec_poll, THIS_MODULE, &np->ecdev)) {
-		printk(KERN_ERR "forcedeth: Failed to offer device.\n");
-		goto out_error;
-	}
-
+	np->ecdev = ecdev_offer(dev, ec_poll, THIS_MODULE);
 	if (np->ecdev) {
 		if (ecdev_open(np->ecdev)) {
 			ecdev_withdraw(np->ecdev);
 			goto out_error;
 		}
-	}
-	else {
+	} else {
 		err = register_netdev(dev);
 		if (err) {
 			printk(KERN_INFO "forcedeth: unable to register netdev: %d\n", err);
